--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>这是一个标题</title>
+</head>
 
-试一下
+<body>
+
+<h1>OW</h1>
+  <p>士兵76</p>
+  <p>I am just getting started 我才刚开始</p>
+<img src="56f32b4381e8833b.jpg" width="255" height="255" alt="" />
+</body>
+</html>
