--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <h1>OW</h1>
   <p>士兵76</p>
   <p>I am just getting started 我才刚开始</p>
-<img src="56f32b4381e8833b.jpg" width="255" height="255" alt="" />
+<a href="http://i04.pic.sogou.com/56f32b4381e8833b"><img src="56f32b4381e8833b.jpg" width="255" height="255" alt="" /></a>
 </body>
 </html>
