--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
 <h1>OW</h1>
-  <p>士兵76</p>
+  <h2>士兵76</h2>
   <p>I am just getting started 我才刚开始</p>
-<a href="http://i04.pic.sogou.com/56f32b4381e8833b"><img src="56f32b4381e8833b.jpg" width="255" height="255" alt="" /></a>
+<p><a href="http://i04.pic.sogou.com/56f32b4381e8833b"><img src="http://i04.pic.sogou.com/56f32b4381e8833b" width="336" height="314" alt="" /></a></p>
 </body>
 </html>
