--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <h1>OW</h1>
   <h2>麦克雷</h2>
   <p>午时已到</p>
-<p><a href="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1512987227692&di=fafabb6e5ffd5c30a6d572d5cfa1bec2&imgtype=0&src=http%3A%2F%2Fimg3.duitang.com%2Fuploads%2Fitem%2F201606%2F03%2F20160603185457_5ZPjS.jpeg"><img src="timg.jpg" width="268" height="303" alt="" /></a></p>
+<p><a href="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1512987227692&di=fafabb6e5ffd5c30a6d572d5cfa1bec2&imgtype=0&src=http%3A%2F%2Fimg3.duitang.com%2Fuploads%2Fitem%2F201606%2F03%2F20160603185457_5ZPjS.jpeg"><img src="https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike150%2C5%2C5%2C150%2C50/sign=bcc8c005fbdeb48fef64a98c9176514c/960a304e251f95ca90fac8d2c1177f3e67095242.jpg" width="268" height="303" alt="" /></a></p>
 </body>
 </html>
