--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <h2>麦克雷</h2>
   <p>午时已到</p>
 <p><img src="timg.jpg" width="268" height="303" alt="" /></a></p>
-<bgsound src="麦克雷 - 午时已到.mp3" loop="-1">
+<audio src="http://www.w3school.com.cn/i/horse.ogg" controls="controls">
+Your browser does not support the audio element.
+</audio>
 
 </body>
 </html>
