--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <p><img src="timg.jpg" width="268" height="303" alt="" /></a></p>
 <audio src="wushi.mp3" controls="controls">
 Your browser does not support the audio element.
+  
+  <embed height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=4847418&page=1" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
 </audio>
 
 </body>
