--- a/h5/h5.html
+++ b/h5/h5.html
@@ -5,7 +5,7 @@
 <title>无标题文档</title>
 <style type="text/css">
 body {
-	background-image: url(timg.jpg);
+	background-image: url(../timg.jpg);
 	height: 100%;
 }
 html{height:100%;
