--- a/h5/h5.html
+++ b/h5/h5.html
@@ -14,6 +14,6 @@ html{height:100%;
 </head>
 
 <body>
-<embed  style="margin:0 auto;" height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=4873874&page=36" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
+<embed  style="margin-left:30px;" height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=4873874&page=36" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
 </body>
 </html>
