--- a/h5/h5.html
+++ b/h5/h5.html
@@ -7,6 +7,7 @@
 body {
 	background-image: url(../timg.jpg);
 	height: 100%;
+	text-align:center;
 }
 html{height:100%;
 }
@@ -14,6 +15,6 @@ html{height:100%;
 </head>
 
 <body>
-<embed  style="margin-left:300px;" height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=4873874&page=36" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
+<embed  style="margin:0 auto;" height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=4873874&page=36" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
 </body>
 </html>
